# magic-api-mcp-server

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE_REFACTORING.md  CHANGELOG.md  DTO_REFACTORING.md  Dockerfile  MANIFEST.in  MCP-MagicAPI-Assistant-设计与提示词.md  MCP使用指南.md  Makefile  README.md  README_conversion.md  REFACTORING_SUMMARY.md  SHUTDOWN_FIX.md  backup_manager.py  convert_pages.sh  convert_pages_to_directory.py  docker-compose.override.yml  docker-compose.yml  extract_api_paths.py  genmagicscript.md  graceful_runner.py  magic_api_client.py  magic_api_debug_client.py  main.py  pyproject.toml  requirements.txt  run_mcp.py  search_manager.py  test_backup_filter.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
auto-test/: final-test-summary.md  test-plan.md  test-report.json  test-runner.js  test-summary.md
cli/: .magic_debug_history  extract_api_paths.py  extract_class_methods.py  magic_api_client.py  magic_api_debug_client.py  magic_api_resource_manager.py
docs/: magicscript-syntax-guide.md  开发者指南.md  用户指南.md  类方法检索工具使用指南.md
examples/: README.md  batch_apis_example.json  batch_delete_example.json  batch_groups_example.json  parameter_metadata_example.md  path_lookup_examples.md  tool_composition_architecture.md  tool_decorators_example.md
magicapi_mcp/: magicapi_assistant.py  settings.py  tool_composer.py  tool_registry.py
magicapi_tools/: __init__.py
magicapi_tools/tools/: api.py  (+12 more)
test/: debug_completion.py  demo_readline.py  demo_resource_manager.py  test_name_filter.py
web-docs/: index.md
(+76 files in other folders)
